--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           >
         </li>
         <li>
-          <a href="https://w.app/brenodsgn" target="_blank">Whatsapp</a>
+          <a href="https://wa.me/553291537256" target="_blank">Whatsapp</a>
         </li>
       </ul>
       <div id="icons">
